--- a/New Dataframe.ipynb
+++ b/New Dataframe.ipynb
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns = ['ЖДУ ОПЛАТУ','Unnamed: 5','ВЫПОЛНЕН','Unnamed: 7'],axis = 1)"
+    "df = df.drop(columns = ['ЖДУ ОПЛАТУ','Unnamed: 5','ВЫПОЛНЕН','Unnamed: 7'],axis = 1) #Удаляю лишние колонки"
    ]
   },
   {
@@ -189,6 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Переименовываю колонки\n",
     "df.rename(columns = {'ОБСУЖДЕНИЕ' : 'ДАТА', 'Unnamed: 1' : 'ВРЕМЯ ДОСТАВКИ','Unnamed: 3' : 'ЗАКАЗ',\n",
     "                     'ОПЛАЧЕН' : 'ИМЯ','Unnamed: 8' : 'ИТОГ','Unnamed: 9' : 'КОММЕНТАРИЙ'}, inplace = True)"
    ]
@@ -200,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(labels = [0],axis = 0)"
+    "df = df.drop(labels = [0],axis = 0) #Удаляю первую строчку"
    ]
   },
   {
@@ -210,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.reset_index()"
+    "df = df.reset_index() #Сброс индексации"
    ]
   },
   {
@@ -220,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop('index',axis=1)"
+    "df = df.drop('index',axis=1) "
    ]
   },
   {
@@ -230,6 +231,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#К датам нужно добавить обозначения года, чтобы перевести в дальнейшем в тип Datetime\n",
+    "\n",
     "df['ДАТА'] = pd.concat([df['ДАТА'].iloc[0:124] + '.2021',\n",
     "                           df['ДАТА'].iloc[125:] + '.2022'])"
    ]
@@ -264,7 +267,7 @@
     }
    ],
    "source": [
-    "np.where(df == '3030 руб')"
+    "np.where(df == '3030 руб') #В результате перевода в Datetime обнаружил ячейку с неподходящим типом данных, нужно исправить"
    ]
   },
   {
@@ -301,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[148, 'ИТОГ'] = 3030"
+    "df.loc[148, 'ИТОГ'] = 3030 #Исправили"
    ]
   },
   {
